<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_background"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rishabh_jain"
                    android:layout_marginTop="24dp"
                    android:layout_marginStart="32dp"
                    android:fontFamily="@font/poppins"
                    android:textSize="21sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_close"
                    android:background="@drawable/background_close"
                    android:contentDescription="@string/close"
                    android:padding="2dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/username"
                    app:layout_constraintBottom_toBottomOf="@id/username"/>

                <ImageView
                    android:id="@+id/profile_picture"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    tools:srcCompat="@tools:sample/avatars"
                    android:contentDescription="@string/close"
                    android:layout_marginTop="40dp"
                    app:layout_constraintTop_toBottomOf="@id/username"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    app:srcCompat="@drawable/ic_heart"
                    app:tint="@color/white"
                    android:contentDescription="@string/close"
                    android:layout_marginStart="16dp"
                    app:layout_constraintTop_toTopOf="@id/profile_picture"
                    app:layout_constraintBottom_toBottomOf="@id/profile_picture"
                    app:layout_constraintStart_toEndOf="@id/profile_picture"/>

                <LinearLayout
                    android:id="@+id/ll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/profile_picture">


                    <View
                        android:id="@+id/divider"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/divider_color" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp">

                        <TextView
                            android:id="@+id/ratings"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_4_6"
                            android:fontFamily="@font/poppins"
                            android:textStyle="bold"
                            android:textSize="17sp"
                            android:gravity="center"
                            android:textColor="@color/rating"
                            android:layout_marginTop="6dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/ic_rating"
                            android:layout_marginStart="8dp"
                            android:contentDescription="@string/_4_6"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="@id/ratings"
                            app:layout_constraintStart_toEndOf="@id/ratings"/>

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ratings"
                            android:textColor="@color/gray"
                            android:fontFamily="@font/poppins"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/ratings"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <View
                        android:id="@+id/divider2"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/divider_color" />


                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/background_main_card"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ll">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/schedule_this_tutor"
                        android:textColor="@color/text_black"
                        android:fontFamily="@font/poppins"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_marginTop="24dp"
                        android:layout_marginStart="24dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:id="@+id/ll2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="2"
                        android:orientation="horizontal"
                        android:layout_marginTop="24dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        android:background="@color/card_background"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textView2"
                        android:baselineAligned="false">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/date_picker"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="6dp"
                            android:layout_weight="1"
                            android:background="@drawable/background_time_card">

                            <ImageView
                                android:id="@+id/imageView4"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_marginStart="12dp"
                                android:layout_marginTop="12dp"
                                android:contentDescription="@string/date"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:srcCompat="@drawable/ic_date" />

                            <TextView
                                android:id="@+id/textView4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:text="@string/date"
                                android:textColor="#7b7871"
                                android:textSize="15sp"
                                app:layout_constraintBottom_toBottomOf="@id/imageView4"
                                app:layout_constraintStart_toEndOf="@id/imageView4"
                                app:layout_constraintTop_toTopOf="@id/imageView4" />

                            <TextView
                                android:id="@+id/selected_date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="15dp"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="10dp"
                                android:fontFamily="@font/poppins"
                                android:text="@string/_03_mar_2022"
                                android:textColor="@color/black"
                                android:textStyle="bold"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@id/imageView4" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:background="@drawable/background_time_card"
                            android:layout_weight="1"
                            android:layout_marginStart="6dp">

                            <ImageView
                                android:id="@+id/imageView5"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                app:srcCompat="@drawable/ic_time"
                                android:contentDescription="@string/time"
                                android:layout_marginEnd="8dp"
                                android:layout_marginTop="12dp"
                                app:layout_constraintEnd_toStartOf="@id/textView6"
                                app:layout_constraintTop_toTopOf="parent"/>

                            <TextView
                                android:id="@+id/textView6"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/time"
                                android:textColor="#7b7871"
                                android:textSize="15sp"
                                android:layout_marginEnd="12dp"
                                app:layout_constraintTop_toTopOf="@id/imageView5"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintBottom_toBottomOf="@id/imageView5"/>

                            <TextView
                                android:id="@+id/textView7"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/select_time"
                                android:textColor="@color/black"
                                android:textStyle="bold"
                                android:fontFamily="@font/poppins"
                                android:layout_marginEnd="15dp"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="10dp"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toBottomOf="@id/imageView5"
                                app:layout_constraintBottom_toBottomOf="parent"/>

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/time_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="24dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ll2"
                        tools:itemCount="12"
                        tools:layoutManager="GridLayoutManager"
                        tools:listitem="@layout/recycler_view_item"
                        tools:spanCount="5" />

                    <TextView
                        android:id="@+id/tv_show_more"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/show_more"
                        android:textSize="17sp"
                        android:textColor="@color/booked_slot"
                        android:textStyle="bold"
                        android:fontFamily="@font/poppins"
                        android:layout_marginTop="24dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/time_recycler_view"/>

                    <View
                        android:id="@+id/divider3"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#e7e4dd"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginTop="24dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_show_more"/>

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_me"
                        android:textColor="@color/text_black"
                        android:fontFamily="@font/poppins"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_marginTop="24dp"
                        android:layout_marginStart="24dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/divider3" />

                    <TextView
                        android:id="@+id/about_me"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dummy_desc"
                        android:textColor="#817e77"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginTop="10dp"
                        app:layout_constraintTop_toBottomOf="@id/textView8"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:background="#fafafa"
                        android:layout_marginTop="40dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/about_me"/>

                    <View
                        android:id="@+id/divider4"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="#afafaf"
                        android:layout_marginStart="100dp"
                        android:layout_marginEnd="100dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/textView10"
                        app:layout_constraintBottom_toBottomOf="@id/textView10"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>